--- a/index.pug
+++ b/index.pug
@@ -7,20 +7,9 @@ html(lang="en")
         title pug test doc 
         link(rel="stylesheet", href="style.css")
     body 
-        header.header 
-            .logo 
-                img(src="https://vimafoods.com/wp-content/uploads/2020/05/mazorcas-maiz-choclo.jpg", alt="corn")
-            .nav 
-                ul 
-                    li.li 
-                        a(href="#") link 1
-                    li.li 
-                        a(href="#") link 2
-                    li.li 
-                        a(href="#") link 3
-                    li.li 
-                        a(href="#") link 4
-                    li.li 
-                        a(href="#") link 5
+        include blocks/header
 
+        main.main main works 
+
+        include blocks/footer
 
