--- a/blocks/header.pug
+++ b/blocks/header.pug
@@ -1,6 +1,6 @@
 block header
 script.
-    function navToggle = function() {        
+    function navToggle() {        
         var navToggleUl = document.getElementById("nav");        
         navToggleUl.classList.toggle("open");
     }
